style.css
#loader {
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 9999;
}

#loader.active {
    display: flex;
}

.spinner {
    height: 180px;
    animation: spin 3s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.header_main {
    background-color: rgb(11, 44, 56);
    height: 100px;
    display: flex;
    align-items: center;
}

.header_style {
    display: flex;
    justify-content: space-between;
    padding-inline: 12px;
}

.pokedex_pokeball {
    display: flex;
    gap: 10px;
}

.pokeball {
    height: 32px;
}

.input_pokemon {
    padding: 6px;
    border-radius: 10px;
    background-color: beige;
}

.input_pokemon:active {
    background-color: beige;
}

.btn_search_reset {
    background-color: rgb(59, 7, 7);
    color: white;
    border-radius: 10px;
    padding: 6px;
}

.content_stopper_header {
    max-width: 1440px;
    width: 100%;
    margin: 0 auto;
}

#tooShort {
    margin-top: 10px;
    color: #cb1e1e;
}

.main_content {
    background-color: rgb(5, 23, 30);
}

.content_stopper {
    max-width: 1440px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
}

#mainContent {
    min-height: 100vh;
    gap: 42px;
    display: flex;
    justify-content: center;
    margin-top: 20px;
}

.show_main_content {
    color: white;
    border: 1px solid white;
    border-radius: 10px;
    height: 260px;
    width: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 10px;
    box-shadow: 2px 2px 2px white;
}

.show_main_content:hover {
    box-shadow: 4px 4px 4px 4px white;
}

.show_main_content h2 {
    text-shadow: 2px 2px 5px #000000;
}

.show_main_content img {
    margin-top: 10px;
    margin-bottom: 15px;
    height: 140px;
    object-fit: cover;
    border-radius: 10px;
}

.type_gap {
    display: flex;
    gap: 6px;
}

.pokemon_type_name {
    border-radius: 10px;
    border: 1px solid white;
    box-shadow: 1px 1px 1px white;
    padding: 5px;
}

.footer_main {
    background-color: rgb(11, 44, 56);
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.next_20_button {
    height: 80px;
    background-color: rgb(59, 7, 7);
    color: white;
    width: 150px;
}

.button_middle {
    display: flex;
    justify-content: center;
    margin-block: 20px;
}

